# formee

./: .gitignore  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: codeql-analysis.yml
docs/: README.md  getting-started.md  installation.md
docs/Auth/: README.md  check.md  hasher.md  login.md  register.md  user_jwt.md  validate.md  visitor_jwt.md  visitor_settings.md
docs/FormTools/: README.md  create.md  deploy.md  fill.md  getResponses.md  read.md
docs/Learn/: 01-Getting Started.md  02-Authenticating.md  03-FormCreation.md  04-Viewing A Form File's Data.md  05-Trying A form from a file.md  06-Filling A Form.md  07-Deploying A Form.md  08-Getting Responses.md
docs/docs_assets/theme/: main.html
formee/: __main__.py
formee/auth/: check.py  hasher.py  login.py  register.py  user_jwt.py  validate.py  visitor_jwt.py  visitor_settings.py
formee/formTools/: create.py  deploy.py  fill.py  read.py  responses.py  validators.py
site/: 404.html  getting-started.html  index.html  installation.html  objects.inv  print_page.html
site/Auth/: check.html  hasher.html  index.html  login.html  register.html  user_jwt.html  validate.html  visitor_jwt.html  visitor_settings.html
site/FormTools/: create.html  deploy.html  fill.html  getResponses.html  index.html  read.html
site/docs_assets/stylesheets/: main.css  scroller.css
site/search/: search_index.json
tests/: test_formee.py
