[tool.poetry]
name = "formee"
version = "0.1.3"
description = "Formee is a tool that provides an easy way to create, edit and manage all of your forms from the command line. It uses a powerful GraphQL API and strives to make the process of working with forms as easy and simple as possible."
authors = ["Arpan Pandey <arpan@hackersreboot.tech>"]
license = "MIT"
repository = "https://github.com/Arpan-206/formee"
readme = "README.md"
include = ["docs/docs_assets/images/logo.svg"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.20.0"
PyInquirer = "^1.0.3"
pyfiglet = "^0.8.post1"
rich = "^12.0.1"
requests = "^2.27.1"
PyYAML = "^6.0"
gql = "^3.1.0"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mkdocs = "^1.3.0"
mkdocs-material = "^8.2.8"
mkdocs-minify-plugin = "^0.5.0"
mkdocs-git-revision-date-localized-plugin = "^1.0.0"
mkdocs-git-authors-plugin = "^0.6.4"
mkdocs-table-reader-plugin = "^1.0.0"
mkdocs-img2fig-plugin = "^0.9.3"
mknotebooks = "^0.7.1"
mkdocs-awesome-pages-plugin = "^2.7.0"
mkdocs-enumerate-headings-plugin = "^0.5.0"
mkdocs-print-site-plugin = "^2.3.2"
mkgendocs = "^0.9.0"
mkdocstrings = "^0.18.1"

[tool.poetry.scripts]
formee = 'formee.__main__:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
